[package]
name = 'pallet-creator-staking'
version = '0.7.2'
authors = ['DappForce <dappforce@pm.me>']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://subsocial.network'
repository = 'https://github.com/dappforce/dappforce-subsocial-node'
description = 'Module for influncer staking.'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }

frame-benchmarking = { git = 'https://github.com/paritytech/substrate', default-features = false, optional = true , branch = 'polkadot-v0.9.18' }
frame-support = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = 'polkadot-v0.9.18' }
frame-system = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = 'polkadot-v0.9.18' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = 'polkadot-v0.9.18' }
sp-std = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = 'polkadot-v0.9.18' }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }

serde = { version = '1.0.132' }
sp-core = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = 'polkadot-v0.9.18' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = 'polkadot-v0.9.18' }
sp-io = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = 'polkadot-v0.9.18' }
rstest = "0.12.0"

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking/runtime-benchmarks']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	"pallet-balances/std",
	"pallet-timestamp/std",
]
try-runtime = [ 'frame-support/try-runtime' ]
